fix: styling for mobile view aligned with figma

--- a/src/components/ItemTile/ItemTile.module.scss
+++ b/src/components/ItemTile/ItemTile.module.scss
@@ -2,7 +2,6 @@
 
 .container {
   display: flex;
-  max-width: 374px;
   opacity: 0.9;
   background-color: $white_100_35;
   border-radius: 10px;
@@ -14,7 +13,7 @@
   max-width: 366px;
   height: 245px;
   border-radius: 10px 10px 0px 0px;
-  
+
 }
 .content {
   align-self: flex-start;
@@ -34,10 +33,13 @@
 
 @media (max-width: 768px){
   .container {
-    width: 374px;
+    width: auto;
     flex-direction: column;
     align-items: center;
-    margin: 30px auto;
+    margin: 38px 8px 0 8px;
+  }
+  .container:last-child {
+    margin-bottom: 100px;
   }
   .image {
     width: 366px;
