--- a/src/components/OurProjects/OurProjects.module.scss
+++ b/src/components/OurProjects/OurProjects.module.scss
@@ -18,6 +18,6 @@
   .title {
     font-weight: 600;
     font-size: 30px;
-    margin: 20px 30px 30px 60px;
+    margin: 20px 30px 28px 32px;
   }
 }
