--- a/src/components/WhoWeAre/WhoWeAre.module.scss
+++ b/src/components/WhoWeAre/WhoWeAre.module.scss
@@ -15,7 +15,7 @@
   padding-top: 32px;
   width: 100%;
   margin-bottom: 10px;
-  margin-left: 18px;
+  margin-left: 32px;
 }
 .pLight {
   font: 20px $helvetica;
@@ -23,7 +23,7 @@
   width: 90%;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: 18px;
+  margin-left: 32px;
   padding-bottom: 52px;
 }
 .backgroundLight {
@@ -102,6 +102,7 @@
 
 @media (max-width: 768px) {
   .h1Light {
-    padding-top: 32px;
+    padding-top: 52px;
+    margin-bottom: 26px;
   }
 }
